# conductor

./: .gitignore  404.html  NOTICE  README.md  index.html  pylintrc  pyproject.toml  pytest.ini  setup.py  sitemap.xml
.github/workflows/: build-trivial.yml  build.yml  explorer.yml  website-trivial.yml  website.yml
cli/: index.html
configuration/: index.html
directives/: index.html
errors/: codegen.py  errors.yml
explorer/: README.md  index.html  package-lock.json  package.json  vite.config.js
proto/: maestro.proto
python-support-library/: index.html
task-types/: index.html
tests/: cond_archive_restore_test.py  cond_clean_test.py  cond_env_validate_test.py  cond_gc_test.py  cond_run_git_commit_test.py  cond_run_git_test.py  cond_run_include_test.py  cond_run_parallel_test.py  cond_run_test.py  cond_where_test.py  conductor_runner.py  config_file_test.py  e2e_optimizer_test.py  eliminate_dep_transfers_test.py  eliminate_shutdown_start_rule_test.py  eliminate_transfer_repos_test.py  experiment_options_test.py  general_archiving_test.py  git_test.py  git_utils.py  join_sibling_envs_test.py  lib_path_test.py  optim_rules_utils_test.py  run_experiment_group_test.py  run_options_test.py  task_identifier_test.py  task_loading_test.py  time_utils_test.py  validation_test.py  version_graph_test.py  version_index_migration_test.py
tools/: build-and-release.sh  build-maestro-wheel.sh  build-website.sh  check-code.sh  deploy-website.sh  generate-proto.sh  install-dev.sh  setup-ci.sh
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+306 files in other folders)
