[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    # Conductor-specific excluded files and directories
    | examples
  )/
  | src/conductor/__init__.py
  | src/conductor/errors/generated.py
  | src/conductor/envs/proto_gen/
  | explorer/
  | env/
)
'''

[tool.mypy]
exclude = [
  'src/conductor/envs/proto_gen/*',
  'src/conductor/explorer/static/*',
  'explorer/*'
]

[[tool.mypy.overrides]]
module = "fabric.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true
